[build-system]
requires = ["setuptools>=61.0.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "cornsnake"
version = "0.0.97"
description = "Wrap common Python utilities for working with files, git, ZIP, lists, processes, dates and times."
readme = "README.md"
authors = [{ name = "Sean Ryan", email = "mr.sean.ryan@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["python", "files", "lists", "utils", "dates", "processes"]
dependencies = [
    "PyMuPDF~=1.24.0"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["bumpver~=2023.1129", "parameterized~=0.9.0", "build~=1.0.3", "bumpver~=2023.1129", "parameterized~=0.9.0", "pdoc~=14.4.0", "pip-tools~=7.3.0", "twine~=5.0.0", "ruff~=0.3.4", "mypy~=1.14.0", "pkginfo~=1.12.1.2"]

[project.urls]
Homepage = "https://github.com/mrseanryan/cornsnake"
Documentation = "http://docs.mrseanryan.cornsnake.s3-website-eu-west-1.amazonaws.com/"
Issues = "https://github.com/mrseanryan/cornsnake/issues"
Source = "https://github.com/mrseanryan/cornsnake"

[tool.bumpver]
current_version = "0.0.97"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"cornsnake/__init__.py" = ["{version}"]
"README.md" = [
    "{version}"
]

[tool.ruff.format]
exclude = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]


[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
